--- a/fixtures/bmatrix_formula.tex
+++ b/fixtures/bmatrix_formula.tex
@@ -14,4 +14,9 @@
     2 & 5 \\
     3 & 2 \\
     9 & 1
-\end{bmatrix})/10
+\end{bmatrix})/10 
+*
+\begin{bmatrix}
+    1 & 0 \\
+    0 & 1
+\end{bmatrix}
